# por-shop

./: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241210_085353_products.rs
src/: error.rs  main.rs
src/config/: db.rs
src/controllers/: product.rs  user.rs
src/entity/: mod.rs  prelude.rs  products.rs  user.rs  users.rs
src/models/: user.rs
src/repository/: product.rs
src/routes/: auth.rs  mod.rs  products.rs
src/services/: auth.rs  error.rs  mod.rs  product_service.rs  user_service.rs
